Feature/building selector (#21)
* building selector

* actually select buildings

* use holograms for better text visibility

* make sure text is readable

* code cleanup

* building previews

* add javadocs

* convert landmines to buildings

* ally building outlines

* unify outline management & outline colors

* entity outline fixes

* building selector actions

* packetentity equipment and landmine preview

* bug fixes and performance improvements

* enlarge outline of selected building

* formatting

* improved outline color management in edge cases

* ease out when enlarging outline
& bug fixes and performance improvements

* update craftbukkit imports and refactor DamageType

* compiles + runs, use damage event packet + support new damage bobbing.

* fix bug

* bug fixes and performance improvements

---------

Co-authored-by: toomuchzelda <68770352+toomuchzelda@users.noreply.github.com>